--- a/marketmakestats/templates/index.html
+++ b/marketmakestats/templates/index.html
@@ -42,7 +42,7 @@
       </table>
       {% endif %}
       {% if chart_data%}
-        <canvas id="myChart" ></canvas>
+        <canvas id="marketChart" ></canvas>
         <script type="text/javascript">
           window.mmslocal.chart_data = {{ chart_data|safe }};
         </script>   
