--- a/conf_templates/nginx.conf.j2
+++ b/conf_templates/nginx.conf.j2
@@ -10,8 +10,8 @@ server {
     {% if ENV == "VAGRANT" %}
     {# Do not use certificates on vagrant installation #}
     {%- else %}
-    ssl_certificate /etc/letsencrypt/live/marketmakingstats.com/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/marketmakingstats.com/privkey.pem;
+    ssl_certificate /etc/letsencrypt/live/{{ CURRENT_HOST }}/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/{{ CURRENT_HOST }}/privkey.pem;
     {%- endif %}
 
     access_log {{ DEPLOY_DIR }}/logs/nginx-access.log;
